# operator-implies-cpp

./: CMakeLists.txt  LICENSE  README.md
include/operator/: implies.hpp
tests/: test_main.cpp
